--- a/index.html
+++ b/index.html
@@ -1,85 +1,267 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <title>project 1</title>
-</head>
-<body> 
-    <h1>GENGSTER DI INDONESIA</h1> 
-    <div class="container">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>G@b03</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/itw2.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=BBH+Bartle&family=Federant&family=Jersey+10&family=Playwrite+CZ:wght@100..400&family=Prata&family=Science+Gothic:wght@100..900&family=Sekuya&display=swap" rel="stylesheet">
+  </head>
+  <body>
 
-        <ul>
-            <li>XTC (EXALT TO CREATIVITY) </li>
-        <P>XTC atau Exalt To Coitus adalah ormas otomotif yang berdiri pada tahun 1982 oleh 4 orang pemuda Bandung yaitu Ivan Rivky Kabira (Masbon), Kuat Suhardjono (U'ang), Agung Wijanarko (Encoem), Irfan Hadisiswanto (Zipponk).
 
-        Belakangan nama itu diganti menjadi Exalt To Creativity dengan simbol kelompok berupa bendera berwarna paling atas putih-birumuda-birutua, tengahnya bergambar lebah yang secara harfiah oleh anggota kelompok XTC dimaknai sebagai solidaritas antar anggota, jauhnya, bila salah satu di antara mereka ada yang diserang, maka yang lainnya akan membela seperti halnya lebah.[2] Untuk menjadi anggota XTC, calon anggota harus mengikuti penggojlogan di Lembang. Biasanya calon Selanjutnya diadakan tes mengendarai motor ke rumah tanpa rem. Kegiatan lain dari XTC yaitu konvoi.
 
-        Musyawarah pertama XTC Indonesia berlangsung di Trans Luxury Hotel yang berada di Jl. Gatot Subroto Bandung. Sebagai hasil dari musyawarah, terpilih ketua umum XTC periode 2019-2024 yaitu Donny Akbar, pemilik dari perusahaan transportasi online BeeGo.</P>
-        <li>BRIGEZ ABADI </li>
-        <p>Brigez adalah komunitas motor yang berasal dari Bandung, Jawa Barat. Nama Brigade Seven lahir sekitar tahun 1977, awalnya sebagai kelompok anak muda yang gemar berkendara motor dan berkumpul di jalanan kota Bandung.
+<nav class="navbar navbar-expand-lg navbar-dark">
+      <div class="container-fluid">
+        <a class="navbar-brand d-flex align-items-center gap-2" href="#home">
+          <img src="img/logo.png" alt="Logo" width="35" height="35">
+          <span class="brand-text">G@b03</span>
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item"><a class="nav-link active" href="#home">Home</a></li>
+            <li class="nav-item"><a class="nav-link" href="#sejarah">Sejarah</a></li>
+            <li class="nav-item"><a class="nav-link" href="#kegiatan">Kegiatan</a></li>
+            <li class="nav-item"><a class="nav-link" href="#arsip">Arsip</a></li>
+            <li class="nav-item"><a class="nav-link" href="#homebase">Homebase</a></li>
+            <li class="nav-item"><a class="nav-link" href="#join">Join</a></li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-       Pada masa awal, Brigez dikenal sebagai geng motor jalanan, seperti banyak komunitas motor lain pada era tersebut. Seiring waktu dan perubahan generasi, Brigez mulai bertransformasi: dari kelompok yang identik dengan rivalitas jalanan menjadi organisasi komunitas motor yang lebih terstruktur.
+    <section id="home">
+      <div class="home-content">
+        <img src="img/logo.png" alt="Logo">
+        <h1>G@b03</h1>
+      </div>
+    </section>
 
-       Memasuki tahun 2000-an, Brigez mulai melakukan pembenahan internal, membentuk kepengurusan, aturan organisasi, serta memperluas jaringan ke berbagai daerah. Nama Brigez Indonesia kemudian digunakan untuk menegaskan identitas sebagai komunitas nasional, bukan sekadar geng lokal.</p>
-        <li>MOONRAKER BAGUSRANGIN </li>
-        <p>Moonraker adalah kelompok/geng motor yang berasal dari Bandung, Jawa Barat. Moonraker berdiri pada tahun 1978, berawal dari sekumpulan anak muda yang memiliki hobi berkendara motor dan berkumpul di wilayah Bandung.
+    <section id="sejarah" class="py-5">
+      <div class="container">
+        <div class="text-center mb-4">
+          <h1>SEJARAH</h1>
+        </div>
+        <div class="row align-items-center">
+          <div class="col-md-4 text-center mb-4 mb-md-0">
+            <img src="img/foto gab.jpeg" alt="foto gab" class="img-fluid rounded shadow">
+          </div>
+          <div class="col-md-8">
+            <p>G@b03 didirikan pada <strong>2020</strong> di Bandung oleh sekelompok pemuda yang menyukai sepak bola dan kegiatan sosial.</p>
+            <p>Sejak awal, G@b03 fokus pada penyelenggaraan olahraga rutin untuk meningkatkan kebugaran dan kekompakan anggota.</p>
+            <p>Selain olahraga, komunitas ini aktif melakukan kegiatan sosial dan amal untuk membantu masyarakat sekitar.</p>
+            <p>Walaupun didirikan di masa pandemi, G@b03 berhasil tumbuh menjadi komunitas yang solid dengan partisipasi aktif anggotanya.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        Pada masa awal berdirinya, Moonraker dikenal sebagai geng motor jalanan, sama seperti banyak kelompok motor lain pada era 1970–1980-an. Identitas mereka kuat, dengan solidaritas tinggi antaranggota, namun juga sering diwarnai konflik dan rivalitas, terutama dengan geng motor lain di Bandung.
+    <section id="kegiatan" class="py-5">
+      <div class="container">
+        <div class="text-center mb-5">
+          <h1>KEGIATAN G@b03</h1>
+          <p>Berikut beberapa kegiatan yang rutin dilakukan oleh G@b03</p>
+        </div>
+        <div class="row g-4">
+          <div class="col-md-4">
+            <div class="card h-100 shadow-sm text-center">
+              <img src="img/persahabatan.jpeg" class="card-img-top" alt="persahabatan">
+              <div class="card-body bg-primary">
+                <h5 class="card-title">Laga Persahabatan</h5>
+                <p class="card-text">Laga persahabatan rutin satu minggu satu kali.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100 shadow-sm text-center">
+              <img src="img/turnamen.jpeg" class="card-img-top" alt="Turnamen">
+              <div class="card-body bg-primary">
+                <h5 class="card-title">Turnamen Internal</h5>
+                <p class="card-text">Turnamen internal antar anggota untuk meningkatkan skill dan sportivitas.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="card h-100 shadow-sm text-center">
+              <img src="img/game .jpeg" class="card-img-top" alt="Game Internal">
+              <div class="card-body bg-primary">
+                <h5 class="card-title">Game Internal</h5>
+                <p class="card-text">Pertandingan internal anggota untuk mempererat solidaritas dan kekompakan.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
-        Nama Moonraker sendiri diambil dari istilah bahasa Inggris yang berarti “pencari sesuatu yang tinggi” atau “pemimpi besar”, yang kemudian menjadi simbol keberanian dan kebebasan bagi anggotanya.
+<section id="arsip" class="py-5 ">
+  <div class="container">
+    <div class="text-center mb-5">
+      <h1>ARSIP FOTO</h1>
+      <p>Momen kebersamaan G@b03</p>
+    </div>
+    <div class="row g-4">
 
-        Seiring berjalannya waktu dan perubahan generasi, Moonraker mengalami perubahan arah. Tekanan sosial, hukum, serta kesadaran internal mendorong kelompok ini untuk mengurangi aktivitas negatif dan mulai bertransformasi ke arah yang lebih terorganisir. Sebagian anggotanya kemudian memilih jalur komunitas, sosial, dan kegiatan positif, meskipun citra masa lalu masih melekat di mata masyarakat.
+      <div class="col-md-4">
+        <div class="arsip-card" data-bs-toggle="modal" data-bs-target="#arsip1">
+          <img src="img/foto1.jpeg" alt="Arsip 1">
+          <div class="overlay"><span>Lihat Foto</span></div>
+        </div>
+      </div>
 
-        Hingga kini, Moonraker dikenal sebagai bagian dari sejarah geng motor Bandung, dengan perjalanan panjang dari kelompok jalanan menuju upaya perbaikan citra dan kedewasaan organisasi.</p>
-        <li>GRAB ON ROAD AKATSUKI</li>
-        <p>Moonraker adalah kelompok/geng motor yang berasal dari Bandung, Jawa Barat. Moonraker berdiri pada tahun 1978, berawal dari sekumpulan anak muda yang memiliki hobi berkendara motor dan berkumpul di wilayah Bandung.
+      <div class="col-md-4">
+        <div class="arsip-card" data-bs-toggle="modal" data-bs-target="#arsip2">
+          <img src="img/foto2.jpeg" alt="Arsip 2">
+          <div class="overlay"><span>Lihat Foto</span></div>
+        </div>
+      </div>
 
-Pada masa awal berdirinya, Moonraker dikenal sebagai geng motor jalanan, sama seperti banyak kelompok motor lain pada era 1970–1980-an. Identitas mereka kuat, dengan solidaritas tinggi antaranggota, namun juga sering diwarnai konflik dan rivalitas, terutama dengan geng motor lain di Bandung.
+      <div class="col-md-4">
+        <div class="arsip-card" data-bs-toggle="modal" data-bs-target="#arsip3">
+          <img src="img/foto3.jpeg" alt="Arsip 3">
+          <div class="overlay"><span>Lihat Foto</span></div>
+        </div>
+      </div>
 
-Nama Moonraker sendiri diambil dari istilah bahasa Inggris yang berarti “pencari sesuatu yang tinggi” atau “pemimpi besar”, yang kemudian menjadi simbol keberanian dan kebebasan bagi anggotanya.
+      <div class="col-md-4">
+        <div class="arsip-card" data-bs-toggle="modal" data-bs-target="#arsip4">
+          <img src="img/foto4.jpeg" alt="Arsip 4">
+          <div class="overlay"><span>Lihat Foto</span></div>
+        </div>
+      </div>
 
-Seiring berjalannya waktu dan perubahan generasi, Moonraker mengalami perubahan arah. Tekanan sosial, hukum, serta kesadaran internal mendorong kelompok ini untuk mengurangi aktivitas negatif dan mulai bertransformasi ke arah yang lebih terorganisir. Sebagian anggotanya kemudian memilih jalur komunitas, sosial, dan kegiatan positif, meskipun citra masa lalu masih melekat di mata masyarakat.
+      <div class="col-md-4">
+        <div class="arsip-card" data-bs-toggle="modal" data-bs-target="#arsip5">
+          <img src="img/foto5.jpeg" alt="Arsip 5">
+          <div class="overlay"><span>Lihat Foto</span></div>
+        </div>
+      </div>
 
-Hingga kini, Moonraker dikenal sebagai bagian dari sejarah geng motor Bandung, dengan perjalanan panjang dari kelompok jalanan menuju upaya perbaikan citra dan kedewasaan organisasi.
+      <div class="col-md-4">
+        <div class="arsip-card" data-bs-toggle="modal" data-bs-target="#arsip6">
+          <img src="img/foto6.jpeg" alt="Arsip 6">
+          <div class="overlay"><span>Lihat Foto</span></div>
+        </div>
+      </div>
 
-Jika kamu mau, saya bisa buatkan:
+    </div>
+  </div>
+</section>
 
-versi singkat untuk tugas sekolah
-
-versi narasi cerita
-
-atau perbandingan Moonraker dan Brigez
-
-sejarah gbr
-
-Sejarah GBR (Gerakan Barudak Rancage)
-
-GBR adalah kelompok/geng motor yang berasal dari Bandung, Jawa Barat. GBR berdiri sekitar awal tahun 1980-an, bermula dari perkumpulan anak muda Bandung yang memiliki hobi berkendara motor, nongkrong, dan solidaritas pertemanan.
-
-Nama Gerakan Barudak Rancage berasal dari bahasa Sunda:
-
-Barudak: anak-anak muda
-
-Rancage: berani, kreatif, punya semangat juang
-
-Pada masa awal, GBR dikenal sebagai geng motor jalanan, dengan identitas yang kuat, loyalitas tinggi antaranggota, serta sering terlibat rivalitas dengan geng motor lain di Bandung. Era 1980–1990-an merupakan masa ketika keberadaan geng motor sangat menonjol di kota ini.
-
-Seiring berjalannya waktu dan pergantian generasi, GBR mulai mengalami perubahan dan pembenahan. Tekanan hukum, dinamika sosial, serta kesadaran internal mendorong sebagian anggotanya untuk mengurangi aktivitas negatif dan berusaha membangun citra yang lebih dewasa.
-
-Saat ini, GBR lebih dikenal sebagai bagian dari sejarah geng motor Bandung, dengan upaya sebagian anggotanya untuk mengarah ke kegiatan yang lebih positif, seperti kebersamaan komunitas dan solidaritas sosial, meskipun bayang-bayang masa lalu masih melekat di masyarakat.
-</p>
-        <li>SLAUGTHER KATUAS</li>
-        <p>Slaughter Katuas adalah salah satu geng motor yang berasal dari Bandung, Jawa Barat. Kelompok ini muncul pada era 1990-an, ketika budaya geng motor di Bandung sedang kuat dan berkembang pesat di kalangan anak muda.
-
-        Nama “Katuas” dalam bahasa Sunda berarti tua/sepuh, yang melambangkan senioritas, pengalaman, dan pengaruh. Sementara “Slaughter” dipakai sebagai simbol keberanian dan sikap keras yang identik dengan geng motor pada masa itu.
-
-        Pada awal kemunculannya, Slaughter Katuas dikenal sebagai kelompok motor jalanan dengan solidaritas tinggi antaranggota, identitas yang kuat, serta terlibat dalam rivalitas dengan geng motor lain. Keberadaannya menjadi bagian dari dinamika sosial anak muda perkotaan Bandung saat itu.
-
-        Seiring berjalannya waktu dan perubahan kondisi sosial serta hukum, aktivitas geng motor mulai mendapat tekanan besar. Banyak anggota Slaughter Katuas yang kemudian berkurang aktivitasnya, berubah arah kehidupan, atau memilih jalur yang lebih positif. Saat ini, Slaughter Katuas lebih dikenal sebagai bagian dari sejarah geng motor Bandung, bukan sebagai kelompok yang aktif seperti dulu.</p>
-
-    </ul>
+<div class="modal fade" id="arsip1" tabindex="-1">
+<div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content bg-transparent border-0">
+      <img src="img/foto1.jpeg" class="img-fluid rounded">
+    </div>
+  </div>
 </div>
-</body>
+<div class="modal fade" id="arsip2" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content bg-transparent border-0">
+      <img src="img/foto2.jpeg" class="img-fluid rounded">
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="arsip3" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content bg-transparent border-0">
+      <img src="img/foto3.jpeg" class="img-fluid rounded">
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="arsip4" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content bg-transparent border-0">
+      <img src="img/foto4.jpeg" class="img-fluid rounded">
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="arsip5" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content bg-transparent border-0">
+      <img src="img/foto5.jpeg" class="img-fluid rounded">
+    </div>
+  </div>
+</div>
+<div class="modal fade" id="arsip6" tabindex="-1">
+  <div class="modal-dialog modal-dialog-centered modal-md">
+    <div class="modal-content bg-transparent border-0">
+      <img src="img/foto6.jpeg" class="img-fluid rounded">
+    </div>
+  </div>
+</div>
+
+    <section id="homebase" class="py-5">
+      <div class="container">
+        <div class="row align-items-center">
+          <div class="col-md-6 text-center text-md-start mb-4 mb-md-0">
+            <img src="img/hombase.jpeg" class="img-fluid rounded shadow" alt="Homebase G@b03">
+          </div>
+          <div class="col-md-6 text-md-start text-center">
+            <h3>Homebase G@b03</h3>
+            <p class="text-muted">Homebase G@b03 merupakan tempat berkumpul anggota saat bermain sepak bola. Simbol solidaritas dan kekompakan.</p>
+            <p class="mb-0">📍 <strong>Lokasi:</strong> 6CQM+PM, Mandalasari, Cikalong Wetan, Kabupaten Bandung Barat, Jawa Barat</p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="join" class="py-5 bg-light">
+      <div class="container text-center">
+        <button class="btn btn-primary btn-lg mb-4" data-bs-toggle="collapse" data-bs-target="#joinForm">
+          Join Komunitas Kami!
+        </button>
+        <div class="collapse" id="joinForm">
+          <div class="card mx-auto shadow rounded" style="max-width:500px;">
+            <div class="card-body">
+              <h3>Form Join G@b03</h3>
+              <form>
+                <div class="mb-3 text-start">
+                  <label class="form-label">Nama Lengkap</label>
+                  <input type="text" class="form-control" placeholder="Masukkan nama">
+                </div>
+                <div class="mb-3 text-start">
+                  <label class="form-label">No HP</label>
+                  <input type="text" class="form-control" placeholder="08xxxxxxxx">
+                </div>
+               
+                <button type="submit" class="btn btn-success w-100">Kirim</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <footer class="py-4">
+      <div class="container">
+        <div class="d-flex flex-column flex-md-row justify-content-between align-items-start">
+          <div class="mb-3 mb-md-0">
+            <div class="d-flex align-items-center gap-2 mb-2">
+              <img src="img/logo.png" alt="Logo" width="40">
+              <h5 class="mb-0">G@b03</h5>
+            </div>
+            <p class="small mb-0">Komunitas sepak bola yang berdiri sejak 2020 di Bandung.</p>
+          </div>
+          <div class="text-start ms-md-3">
+            <h5>Kontak</h5>
+            <ul class="list-unstyled small mb-0">
+              <li>📍 Cikalong Wetan, Jawa Barat</li>
+              <li>📞 081318300262</li>
+              <li>📧 gab03@gmail.com</li>
+            </ul>
+          </div>
+        </div>
+        <div class="text-center border-top pt-3 mt-3 small">© 2025 G@b03 • All Rights Reserved</div>
+      </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
