--- a/index.html
+++ b/index.html
@@ -221,14 +221,14 @@
           <div class="card mx-auto shadow rounded" style="max-width:500px;">
             <div class="card-body">
               <h3>Form Join G@b03</h3>
-              <form>
+              <form name="g@b03">
                 <div class="mb-3 text-start">
                   <label class="form-label">Nama Lengkap</label>
-                  <input type="text" class="form-control" placeholder="Masukkan nama">
+                  <input type="text" class="form-control" placeholder="Masukkan nama" name="namalengkap">
                 </div>
                 <div class="mb-3 text-start">
                   <label class="form-label">No HP</label>
-                  <input type="text" class="form-control" placeholder="08xxxxxxxx">
+                  <input type="text" class="form-control" placeholder="08xxxxxxxx" name="nohp">
                 </div>
                
                 <button type="submit" class="btn btn-success w-100">Kirim</button>
@@ -263,5 +263,16 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+  const scriptURL = 'https://script.google.com/macros/s/AKfycbwNuUW0hg12B_58rrgPq1_8087mwwhxLYJilrPZQb9LGmTghX-p_9gQ-7aSGbWdxetPuA/exec'
+  const form = document.forms['g@b03']
+
+  form.addEventListener('submit', e => {
+    e.preventDefault()
+    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
+      .then(response => console.log('Success!', response))
+      .catch(error => console.error('Error!', error.message))
+  })
+</script>
   </body>
 </html>
